--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,13 @@ board = esp32doit-devkit-v1
 framework = arduino
 test_framework = googletest
 monitor_speed = 115200
-lib_deps = google/googletest@^1.15.2
-
-
+lib_deps = 
+	google/googletest@^1.15.2
+	#bblanchon/ArduinoJson@^7.3.0
+    #https://github.com/nlohmann/json
 lib_ldf_mode = deep+
-build_flags =
-    -std=gnu++14
-    -I include 
+build_flags = 
+	-std=gnu++17
+	-I include
 build_unflags = 
-    -std=gnu++11
+	-std=gnu++11
